--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,11 +14,14 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&family=Merriweather:wght@400&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="{{"/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <!-- <link rel="stylesheet" href="{{ '/assets/css/beautifuljekyll.css' | relative_url }}"> -->
   <link rel="stylesheet" href="{{ '/assets/css/pygment_highlights.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/fonts.css' | relative_url }}">
 
 </head>
