--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,50 +5,56 @@ layout: default
 <!-- Page Header -->
 {% if page.background %}
 <header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
-  {% else %}
+{% else %}
   <header class="masthead">
-    {% endif %}
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="post-heading">
-            <h1>{{ page.title }}</h1>
-            {% if page.subtitle %}
+{% endif %}
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="post-heading">
+          <h1>{{ page.title }}</h1>
+          {% if page.subtitle %}
             <h2 class="subheading">{{ page.subtitle }}</h2>
+          {% endif %}
+          <span class="meta" style="font-size: 0.9em;">
+            <i class="fas fa-calendar-alt" style="font-size: 0.8em;"></i> {{ page.date | date: '%d %b %Y' }} &nbsp; 
+            <i class="fas fa-user" style="font-size: 0.8em;"></i> <a href="#">{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}</a> &nbsp; 
+            &middot; <i class="fas fa-clock" style="font-size: 0.8em;"></i> {% include read_time.html content=page.content %}
+          </span>
+          <div class="tags" style="margin-top: 10px;">
+            {% if page.tags %}
+              <span class="tags-label"><strong>Tags:</strong></span>
+              {% for tag in page.tags %}
+                <a href="{{ site.baseurl }}/tags/{{ tag | slugify }}" class="tag">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+              {% endfor %}
             {% endif %}
-            <span class="meta">Posted by
-              <a href="#">{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}</a>
-              on {{ page.date | date: '%B %d, %Y' }} &middot; {% include read_time.html
-              content=page.content %}
-            </span>
           </div>
         </div>
       </div>
     </div>
-  </header>
+  </div>
+</header>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
 
-        {{ content }}
+      {{ content }}
 
-        <hr>
+      <hr>
 
-        <div class="clearfix">
+      <div class="clearfix">
 
-          {% if page.previous.url %}
-          <a class="btn btn-primary float-left" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.previous.title }}">&larr; Previous<span class="d-none d-md-inline">
-              Post</span></a>
-          {% endif %}
-          {% if page.next.url %}
-          <a class="btn btn-primary float-right" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">Next<span class="d-none d-md-inline">
-              Post</span> &rarr;</a>
-          {% endif %}
-
-        </div>
+        {% if page.previous.url %}
+          <a class="btn btn-primary float-left" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.previous.title }}">&larr; Previous<span class="d-none d-md-inline"> Post</span></a>
+        {% endif %}
+        {% if page.next.url %}
+          <a class="btn btn-primary float-right" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">Next<span class="d-none d-md-inline"> Post</span> &rarr;</a>
+        {% endif %}
 
       </div>
+
     </div>
   </div>
+</div>
