--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,5 +23,8 @@
   <!-- <link rel="stylesheet" href="{{ '/assets/css/beautifuljekyll.css' | relative_url }}"> -->
   <link rel="stylesheet" href="{{ '/assets/css/pygment_highlights.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/fonts.css' | relative_url }}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/atom-one-dark.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
 
 </head>
